--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-validation": "^1.0.2",
+    "lodash": "^4.17.5",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.6"
+    "mongoose": "^5.0.6",
+    "valid-url": "^1.0.9",
+    "validator": "^9.4.1"
   }
 }
